crates/tribute-passes/src/native/snapshots/tribute_passes__native__tribute_rt_to_clif__tests__box_float_to_clif.snap
---
source: crates/tribute-passes/src/native/tribute_rt_to_clif.rs
expression: result
---
core.module @test {
  func.func @f(%0: core.f64) -> core.ptr {
      %1 = clif.iconst {value = 16} : core.i64
      %2 = clif.call %1 {callee = @__tribute_alloc} : core.ptr
      %3 = clif.iconst {value = 1} : core.i32
      clif.store %3, %2 {offset = 0}
      %4 = clif.iconst {value = 4} : core.i32
      clif.store %4, %2 {offset = 4}
      %5 = clif.iconst {value = 8} : core.i64
      %6 = clif.iadd %2, %5 : core.ptr
      clif.store %0, %6 {offset = 0}
      %7 = clif.iconst {value = 0} : core.ptr
      %8 = clif.iadd %6, %7 : core.ptr
      func.return %8
  }
}
