crates/tribute-passes/src/native/snapshots/tribute_passes__native__tribute_rt_to_clif__tests__unbox_bool_to_clif.snap
---
source: crates/tribute-passes/src/native/tribute_rt_to_clif.rs
assertion_line: 552
expression: result
---
core.module @test {
  func.func @f(%0: core.ptr) -> core.i32 {
    ^bb0:
      %1 = clif.load %0 {offset = 0} : core.i32
      func.return %1
  }
}
