crates/tribute-passes/src/native/snapshots/tribute_passes__native__tribute_rt_to_clif__tests__unbox_float_to_clif.snap
---
source: crates/tribute-passes/src/native/tribute_rt_to_clif.rs
expression: result
---
core.module @test {
  func.func @f(%0: core.ptr) -> core.f64 {
      %1 = clif.load %0 {offset = 0} : core.f64
      func.return %1
  }
}
